Initial Project Plan

--- a/README
+++ b/README
@@ -1,1 +1,78 @@
-test
+Dreamer Team Project Plan
+-----------------------
+
+### 1. Team
+
+525698 Teemu Huovinen
+544566 Iiro Nurmi
+544430 Mehrad Mohammadi
+
+
+### 2. Goal
+
+Our goal is the highest grade. We start by working with the mandatory features, and add as many optional features as we can.
+
+### 3. Plans
+
+Optional features in prioritized order:
+
+* 3rd party login
+* RESTful API (which we will keep in mind from the start)
+* Mobile friendly (which we will keep in mind from the start)
+* Save-load and resolution feature
+* Social media sharing
+
+
+
+### 4. Process and Time Schedule
+
+#### 4.1. Deadlines
+
+* 13.12.2015   Group registration
+* 20.12.2015   Project Plan
+* 20.02.2016   Final submission
+
+
+#### 4.2. Communication
+
+Telegram is used for chat-type communication. Trello will be used for tracking of the progress of features.
+
+#### 4.3. Initial schedule
+
+* 04.01 - 14.01: Iiro is on holiday (partying) at Majorca.
+* 04.01 - 10.01: Initial project setup
+* 11.01 - 17.01: Design and environment setup
+** Database schema
+** Possible architecture/domain modeling
+* 18.01 - 31.01: Basic player and developer features
+** User registration (possible authentication)
+** Player: Buy, play games, see high scores, record scores
+** Developer: Add games, see list of game sales
+* 01.02 - 07.02: Mandatory features contd.
+** Authentication
+** Payment functionality
+** Game/service interaction
+* 07.02 - 20.02: Optional functionalities and testing
+
+### 5. Testing
+
+We will practice TDD-style of feature design on a smaller feature, but not the whole project.
+We will do unit-testing, where unit-tests are developed as part of feature development.
+Acceptance testing will be performed in Heroku.
+
+### 6. Risk Analysis
+
+* Unforeseen, longer absences (sicknesses etc).
+** Only three group members so losing even one group member for a week is detrimental.
+
+* Falling behind in schedule
+** Other courses, design refactoring
+
+* Not dividing the project to tasks well enough
+** Lacking expertise produces development and design overhead
+
+* Design failures
+** Not taking all features into consideration during design
+
+* Teemu getting a job
+** Minor risk with a big impact to group member availability
