small fixes of readme

--- a/README
+++ b/README
@@ -15,16 +15,16 @@ Our goal is the highest grade. We start by working with the mandatory features, 
 ### 3. Plans
 Phase 1 planning and design:
 Start by designing the platform, that includes the database schema and possible architecture/domain modeling.
-Few mockups or if not too time consuming, we will build the "mockups" with HTML/CSS. The plan is to have a good picture on how the platfor should look like.
+Few mockups or if not too time consuming, we will build the "mockups" with HTML/CSS. The plan is to have a good picture on how the platform should look like.
 
 Phase 2 Basic features:
-Start to implement features based on the models. Basic player and developer features (CRUD create, create, read, delete). 
+Start to implement features based on the models. Basic player and developer features (CRUD create, create, read, delete).
 Basic UI for those features.
-From basic CRUD features on, implement more andvanched.
-This phase includes user registeration and possibly authentication.
+From basic CRUD features on, implement more advanced.
+This phase includes user registration and possibly authentication.
 
 Phase 3 continuing to more features:
-Features include: 
+Features include:
 ** Authentication
 ** Payment functionality
 ** Game/service interaction
